<resources>
    <string name="app_name">To-Do List</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addATask">Add a task</string>
    <string name="fillTheDetails">Fill the details below to add a task into your TODO</string>
    <string name="taskTitle">Task title</string>
    <string name="taskDateAndTime">Task date and time</string>
    <string name="date">date</string>
    <string name="addSubtasks">Add Subtasks</string>
    <string name="addTaskBtn">Add task</string>
    <string name="taskDetails">Task Details</string>
    <string name="subtasks">Subtasks</string>
    <string name="updateTheTask">Update the task</string>
    <string name="updateTask">Update Task</string>

    <string name="text">Light Mode</string>
    <string name="hello_adrika">Hello Adrika</string>
</resources>